# Test-Fractal

./: .gitignore  AGENTS.md  LICENSE  NOTES.md  README.md  docs_observability.txt  pyproject.toml  requirements.txt  target_repo_smoke.txt
.codex/: config.toml
.codex/agents/: architect.toml  builder.toml  holmes.toml  planner.toml  reviewer.toml  tester.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.md
agent_orchestrator/: __init__.py  cli.py  codex_runner.py  codex_status.py  config.py  doctor.py  git_ops.py  github_ops.py  labels.py  orchestrator.py  run_log.py  shell.py  state.py  target_repo.py
config/: orchestrator.json
core/: __init__.py  cli.py  mandelbrot.py
docs/: ARCHITECTURE.md  CODEX_SETUP.md  GITHUB_CONNECTOR_WORKFLOW.md  GITHUB_WORKFLOW.md  LABELS.md  OPERATIONS.md  PLAN.md  REPOSITORY_LAYOUT.md  REPO_MAP.md  REVIEW_PROTOCOL.md  ROADMAP.md  ROLES.md  SECURITY.md  test-note.md
docs/examples/: fractal-mvp-issue.md
prompts/roles/: architect.md  builder.md  holmes.md  planner.md  reviewer.md  tester.md
scripts/: create-labels.ps1  doctor.ps1  run-agent.ps1  run-agent.sh
tests/: test_builder_snapshot.py  test_cli_version.py  test_codex_runner_metrics.py  test_codex_status.py  test_config.py  test_docs.py  test_dry_run.py  test_git_ops.py  test_github_ops_target_repo.py  test_mandelbrot.py  test_review_decision.py  test_role_metric_links.py  test_run_log.py  test_shell.py  test_target_repo_option.py
